--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
 
     <!-- 9. Footer -->
     <footer>
-        <h2>Is this Love? IDK, I'm Confused...<br>
+        <h2>What is this feeling? IDK, I'm Confused...<br>
             I'm acting wierd in front of the only girl in my life.<br>
             Whatever we are, I’m glad it’s you.</h2>
         <h5>Happy Valentine’s Day, bestie. (Matti) 😏💗</h5>
@@ -599,4 +599,5 @@
         }
     </script>
 </body>
+
 </html>
