--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
     <div class="music-player" id="musicToggle">
         <span>🎧</span> <span id="musicText">Play Music</span>
         <audio id="bgMusic" loop>
-            <source src="https://www.bensound.com/bensound-music/bensound-love.mp3" type="audio/mpeg">
+            <source src="../angelsbymyside.mp3" type="audio/mpeg">
         </audio>
     </div>
 
@@ -601,3 +601,4 @@
 </body>
 
 </html>
+
